<resources>
    <string name="app_name">Gastos deviaje</string>
    <string name="titulo_viaje">Bariloche 2026</string>
    <string name="fechas_viaje">12 al 19 de enero</string>
    <string name="label_total">Total</string>
    <string name="label_por_persona">Por persona</string>
    <string name="label_amigos">Amigos</string>
    <string name="titulo_gastos">Gastos</string>
    <string name="btn_agregar_gasto">Agregar gasto</string>
    <string name="total_format">$%1$s</string>
    <string name="desc_foto_viaje">Foto de Bariloche</string>
    <string name="valor_inicial_cero">$0</string>
    <string name="cantidad_amigos">4</string>
    <string name="pago_format">Pagó %1$s</string>
    <string name="sin_mas_ejemplos">Ya agregaste todos los gastos de ejemplo</string>
</resources>