<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="0dp"
        android:layout_height="@dimen/altura_header"
        android:contentDescription="@string/desc_foto_viaje"
        android:scaleType="centerCrop"
        android:src="@drawable/foto_bariloche"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFechas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_pantalla"
        android:layout_marginBottom="@dimen/margen_pantalla"
        android:text="@string/fechas_viaje"
        android:textColor="@color/white"
        android:textSize="@dimen/texto_normal"
        app:layout_constraintBottom_toBottomOf="@id/ivHeader"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_pantalla"
        android:text="@string/titulo_viaje"
        android:textColor="@color/white"
        android:textSize="@dimen/texto_titulo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvFechas"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llResumen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/margen_pantalla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivHeader">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_total"
                android:textColor="@color/texto_secundario" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor_inicial_cero"
                android:textColor="@color/texto_principal"
                android:textSize="@dimen/texto_normal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_por_persona"
                android:textColor="@color/texto_secundario" />

            <TextView
                android:id="@+id/tvPorPersona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor_inicial_cero"
                android:textColor="@color/texto_principal"
                android:textSize="@dimen/texto_normal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_amigos"
                android:textColor="@color/texto_secundario" />

            <TextView
                android:id="@+id/tvAmigos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad_amigos"
                android:textColor="@color/texto_principal"
                android:textSize="@dimen/texto_normal"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvTituloGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_pantalla"
        android:text="@string/titulo_gastos"
        android:textColor="@color/texto_principal"
        android:textSize="@dimen/texto_normal"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llResumen" />

    <ScrollView
        android:id="@+id/svGastos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margen_pantalla"
        app:layout_constraintBottom_toTopOf="@id/btnAgregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloGastos">

        <LinearLayout
            android:id="@+id/listaGastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_pantalla"
        android:backgroundTint="@color/primario"
        android:text="@string/btn_agregar_gasto"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>